--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "coinchat"
   ],
   "author": "dremacog",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/coinchat/coinchat-js-sdk/issues"
   },
